Fixed the background of the footer, which is full-width and black now. Changed menu to be visible on small screens.

--- a/client/components/footer/footer.scss
+++ b/client/components/footer/footer.scss
@@ -1,5 +1,11 @@
 footer {
     background: inherit;
+    
+    .container {
+        background-color: #000;
+        z-index: 99;
+        position: relative;
+    }
 }
 
 .brands {
@@ -55,10 +61,4 @@ footer {
 			vertical-align: middle;
 		}
 	}
-}
-
-.epilogue {
-	background-color: #000;
-	z-index: 101;
-	position: relative;
 }
